# aulas

./: Aulas.md  index.html  index.md
01-10/: Indexed.md
08-10/: PL-SQL.md  Sequence.html  Sequence.md  Triggers.html  Triggers.md
bd/01-10/: Indexed.md
bd/08-10/: PL-SQL.md  Triggers.html  Triggers.md
bd/15-10/: Procedure.md
calculo/: resumo.html
claiton/: resumo.md
eight-period/compiler/01-09/: trabalho.tex
eight-period/compiler/16-08/: compiladorTrabalho.tex
eight-period/compiler/25-08/: trabalho.tex
eight-period/compiler/presentation/: names.csv  pronomes.csv  providers.csv
eight-period/compiler/presentation/rust/: Cargo.toml  memcheck.out  output.csv
eight-period/compiler/presentation/rust/src/: main.rs  util.rs
eight-period/distributed-system/26-10/: ref.bib  trabalho.tex
eight-period/distributed-system/31-08/: trabalho.tex
engenharia_software/11-03/: index.html  index.md
engenharia_software/18-02/: main.md
engenharia_software/18-03/: index.md
engenharia_software/19-10/: teste_software.md
engenharia_software/2019/18-03/: index.html
engenharia_software/2019/20-05/: index.md
engenharia_software/2019/27-05/: index.html  index.md
engenharia_software/22-04/: index.html  index.md
engenharia_software/29-04/: main.html
estrutura/avl_tree/: index.md
estrutura/b_tree/: index.html  index.md
estrutura/graphs/: index.html  index.md
estrutura/graphs/presentation/: presentation.html  presentation.md
fifth-period/claiton/: codificacao.html  codificacao.md  hipermidia.md
fourth-period/calculo/: resumo.rmd
tcc/: script.md
(+68 files in other folders)
